{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 141,
  "lineage": "e3fad873-601b-2e01-77c6-3f28a5e9241c",
  "resources": [
    {
      "module": "module.vpc[\"map\"]",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010575877879:network-acl/acl-03811632c99e4cfcf",
            "default_network_acl_id": "acl-03811632c99e4cfcf",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-03811632c99e4cfcf",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "010575877879",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-0097d90ba1f0ae360",
              "subnet-00fe0ef237ae95e68",
              "subnet-03dda6afa575997c4",
              "subnet-09de7e94e19c28bb2",
              "subnet-0cc4acdb1204ef003",
              "subnet-0f18e16bc16f4c822"
            ],
            "tags": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "vpc_id": "vpc-04abd6acec1b6faa5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"map\"]",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010575877879:route-table/rtb-078c30b79d22dc50b",
            "default_route_table_id": "rtb-078c30b79d22dc50b",
            "id": "rtb-078c30b79d22dc50b",
            "owner_id": "010575877879",
            "propagating_vgws": null,
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-04abd6acec1b6faa5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"map\"]",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010575877879:security-group/sg-08ab40c2553f3fee3",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-08ab40c2553f3fee3",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "010575877879",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "vpc_id": "vpc-04abd6acec1b6faa5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"map\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eba191943e8f011f",
            "arn": "arn:aws:ec2:us-east-1:010575877879:elastic-ip/eipalloc-0eba191943e8f011f",
            "domain": "vpc",
            "id": "eipalloc-0eba191943e8f011f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-91-251-39.compute-1.amazonaws.com",
            "public_ip": "54.91.251.39",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"map\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010575877879:internet-gateway/igw-0b9327ba3b3904196",
            "id": "igw-0b9327ba3b3904196",
            "owner_id": "010575877879",
            "region": "us-east-1",
            "tags": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "vpc_id": "vpc-04abd6acec1b6faa5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"map\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0eba191943e8f011f",
            "association_id": "eipassoc-03fe8625fb64c3b4a",
            "connectivity_type": "public",
            "id": "nat-09b8d4bfc741d2b78",
            "network_interface_id": "eni-0994c4c5087782874",
            "private_ip": "10.0.4.251",
            "public_ip": "54.91.251.39",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03dda6afa575997c4",
            "tags": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"map\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e4a7a5752f38c85d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09b8d4bfc741d2b78",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0e4a7a5752f38c85d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"map\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b9327ba3b3904196",
            "id": "r-rtb-028b53ef16ef8cda51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-028b53ef16ef8cda5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"map\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010575877879:route-table/rtb-0e4a7a5752f38c85d",
            "id": "rtb-0e4a7a5752f38c85d",
            "owner_id": "010575877879",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-04abd6acec1b6faa5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"map\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010575877879:route-table/rtb-028b53ef16ef8cda5",
            "id": "rtb-028b53ef16ef8cda5",
            "owner_id": "010575877879",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-04abd6acec1b6faa5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"map\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025908a723ca704b0",
            "region": "us-east-1",
            "route_table_id": "rtb-0e4a7a5752f38c85d",
            "subnet_id": "subnet-09de7e94e19c28bb2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07798dd8946015280",
            "region": "us-east-1",
            "route_table_id": "rtb-0e4a7a5752f38c85d",
            "subnet_id": "subnet-0097d90ba1f0ae360"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b41d02556ed64f50",
            "region": "us-east-1",
            "route_table_id": "rtb-0e4a7a5752f38c85d",
            "subnet_id": "subnet-00fe0ef237ae95e68"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"map\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061c70b3e125a3714",
            "region": "us-east-1",
            "route_table_id": "rtb-028b53ef16ef8cda5",
            "subnet_id": "subnet-03dda6afa575997c4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026a9d03719fee189",
            "region": "us-east-1",
            "route_table_id": "rtb-028b53ef16ef8cda5",
            "subnet_id": "subnet-0f18e16bc16f4c822"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072cf3e8662b2612d",
            "region": "us-east-1",
            "route_table_id": "rtb-028b53ef16ef8cda5",
            "subnet_id": "subnet-0cc4acdb1204ef003"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"map\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010575877879:subnet/subnet-09de7e94e19c28bb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09de7e94e19c28bb2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010575877879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2-private",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance",
              "Tier": "private"
            },
            "tags_all": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2-private",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance",
              "Tier": "private"
            },
            "vpc_id": "vpc-04abd6acec1b6faa5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010575877879:subnet/subnet-0097d90ba1f0ae360",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0097d90ba1f0ae360",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010575877879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2-private",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance",
              "Tier": "private"
            },
            "tags_all": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2-private",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance",
              "Tier": "private"
            },
            "vpc_id": "vpc-04abd6acec1b6faa5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010575877879:subnet/subnet-00fe0ef237ae95e68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fe0ef237ae95e68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010575877879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2-private",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance",
              "Tier": "private"
            },
            "tags_all": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2-private",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance",
              "Tier": "private"
            },
            "vpc_id": "vpc-04abd6acec1b6faa5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"map\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010575877879:subnet/subnet-03dda6afa575997c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03dda6afa575997c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010575877879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2-public",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance",
              "Tier": "public"
            },
            "tags_all": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2-public",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance",
              "Tier": "public"
            },
            "vpc_id": "vpc-04abd6acec1b6faa5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010575877879:subnet/subnet-0f18e16bc16f4c822",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f18e16bc16f4c822",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010575877879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2-public",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance",
              "Tier": "public"
            },
            "tags_all": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2-public",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance",
              "Tier": "public"
            },
            "vpc_id": "vpc-04abd6acec1b6faa5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010575877879:subnet/subnet-0cc4acdb1204ef003",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc4acdb1204ef003",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010575877879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2-public",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance",
              "Tier": "public"
            },
            "tags_all": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2-public",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance",
              "Tier": "public"
            },
            "vpc_id": "vpc-04abd6acec1b6faa5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"map\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010575877879:vpc/vpc-04abd6acec1b6faa5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03811632c99e4cfcf",
            "default_route_table_id": "rtb-078c30b79d22dc50b",
            "default_security_group_id": "sg-08ab40c2553f3fee3",
            "dhcp_options_id": "dopt-063311cc566f1ffc8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04abd6acec1b6faa5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-078c30b79d22dc50b",
            "owner_id": "010575877879",
            "region": "us-east-1",
            "tags": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            },
            "tags_all": {
              "Example": "ex-aws-ec2",
              "Name": "ex-aws-ec2",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ec2-instance"
            }
          }
        }
      ]
    }
  ]
}